新增bower 及 Grunt 来管理插件

--- a/demo.html
+++ b/demo.html
@@ -48,8 +48,8 @@
         <!--<a href="javascript:;">上一页</a>-->
         <!--<a href="javascript:;">去第三页</a>-->
     <!--</div>-->
-    <script src="js/zepto.js"></script>
-    <script src="js/zepto.snapscroll.js"></script>
+    <script src="bower_components/zepto/zepto.min.js"></script>
+    <script src="zepto.snapscroll.js"></script>
     <script>
         var $pages  = $('#J_pages');
         $pages.snapscroll();
